data_processing - Created builder system (for json export) - Implemented a demo builder (stats)

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 data_processing/data
 data_processing/parser/__pycache__
 data_processing/parsed
+data_processing/builder/__pycache__
+data_processing/builder/builders/__pycache__
